# base-auth-system-backend-frontend

./: README.md
backend/: .gitignore  README.md  example.alembic.ini  pyproject.toml
backend/src/: .example.env  app.py  config.py  run.py
backend/src/alembic/: env.py
backend/src/api/: __init__.py  common.py
backend/src/api/v1/: __init__.py
backend/src/database/: __init__.py  base.py
backend/src/database/models/: __init__.py  models.py  users.py
backend/src/database/requests/: __init__.py  users.py
backend/src/database/schemas/: __init__.py  users.py
backend/src/middlewares/: rate_limit.py
backend/src/utils/: api_structure.py  command_runner.py  endpoints.py  exceptions.py  logger.py  migration_database.py  responses.py
frontend/: package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: AppContainer.tsx  ErrorHandler.tsx  Header.tsx
frontend/src/components/switchers/: LanguageSwitcher.tsx  ThemeSwitcher.tsx
frontend/src/config/: links.ts
frontend/src/hooks/: I18n.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: Home.tsx
frontend/src/pages/errors/: NotFound.tsx  ServerError.tsx
frontend/src/providers/: QueryProvider.tsx  ThemeProvider.tsx
frontend/src/router/: AppRouter.tsx  routes.tsx
frontend/src/utils/: date.ts  initials.ts  isPhone.ts
