[project]
name = "backend-base-auth-system"
version = "0.1.0"
description = "Backend part containing basic auth system code: registration and login via email with confirmation, Google, GitHub, and Telegram authentication"

authors = [{ name = "Ilnaz Mingaleev", email = "ilnazmingaleev0@gmail.com" }]
readme = "README.md"

requires-python = "~=3.13.7"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.10.1",
    "aiomysql>=0.2.0",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.2",
    "ruff>=0.12.1",
    "distro>=1.9.0",
    "aiohttp>=3.12.15",
    "tqdm>=4.67.1",
    "aiogram>=3.22.0",
    "redis>=6.4.0",
    "cryptography>=45.0.7",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[project.scripts]
start = "src.run:start"
migrate = "src.utils.migration_database:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
